--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href='https://lh3.googleusercontent.com/4K_v12knh07w4rW-SCjxkrq6Lsb9014CPvw7tIc_a0TzvxTjKqp6Q4xl3tj0W4iBSuoYyRKF247EbhMe7JaZc6roXARymZE8WEMLO003HgeXY0S4OmCVPbT3xFSltQad5jWzHw3Bdw=w2400' />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/4K_v12knh07w4rW-SCjxkrq6Lsb9014CPvw7tIc_a0TzvxTjKqp6Q4xl3tj0W4iBSuoYyRKF247EbhMe7JaZc6roXARymZE8WEMLO003HgeXY0S4OmCVPbT3xFSltQad5jWzHw3Bdw=w2400" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Timber</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
